--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
+
 <body>
 
     <nav class="navbar bg-dark dflex justify-content-center">
-        <h1>Weather Dashboard</h1>
-      </nav>
+        <h1 class="title"><i class="fas fa-cloud-sun"></i>Weather Dashboard</h1>
+    </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div id="searches">
+                    <div class="card-body">
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-1" type="search" placeholder="Search by city">
+                            <button class="btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search-location"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                <div class="card col-sm-12 mt-3">
+                    <div class="card-body" id="currentWeather">
+                        <h1>Current Weather</h1>
+                    </div>
+                </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 mt-3">
+                        <h3>5-Day Forecast:</h3>
+                    </div>
+                    </div>
+            </div>
+        </div>
+    </div>
 
-    
 </body>
+
 </html>
