--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                 <div id="searches">
                     <div class="card-body">
                         <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-1" type="search" placeholder="Search by city">
-                            <button class="btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search-location"></i></button>
+                            <input class="form-control mr-sm-1 cityInput" type="number" placeholder="Search by zipcode">
+                            <button class="btn btn-info my-2 my-sm-0 citySearch" type="submit"><i class="fas fa-search-location"></i></button>
                         </form>
+                        <div class="card mt-2" style="width: 100%;">
+                            <ul class="list-group list-group-flush cityList">
+                            </ul>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -38,6 +42,10 @@
                 <div class="card col-sm-12 mt-3">
                     <div class="card-body" id="currentWeather">
                         <h1>Current Weather</h1>
+                        <h6>Temperature:</h6>
+                        <h6>Humidity:</h6>
+                        <h6>Wind Speed:</h6>
+                        <h6>UV Index:</h6>
                     </div>
                 </div>
                 </div>
