--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
                 <div class="row">
                 <div class="card col-sm-12 mt-3">
                     <div class="card-body" id="currentWeather">
-                        <h1>Current Weather</h1>
-                        <h6>Temperature:</h6>
-                        <h6>Humidity:</h6>
-                        <h6>Wind Speed:</h6>
-                        <h6>UV Index:</h6>
+                        <h1 class="currCity">Current Weather</h1>
+                        <h6 class="temp">Temperature:</h6>
+                        <h6 class="humid">Humidity:</h6>
+                        <h6 class="wind">Wind Speed:</h6>
                     </div>
                 </div>
                 </div>
