--- a/index.html
+++ b/index.html
@@ -51,6 +51,43 @@
                 <div class="row">
                     <div class="col-sm-12 mt-3">
                         <h3>5-Day Forecast:</h3>
+                        <div class="row days">
+                            <div class="col-md-2 mr-2">
+                                <div class="card day" data-value="1">
+                                    <h6>day 1</h6>
+                                    <p class="dayTemp" data-value="1"></p>
+                                    <p class="dayHumid" data-value="1"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-2 mr-2" data-value="2">
+                                <div class="card day">
+                                    <h6>day 2</h6>
+                                    <p class="dayTemp" data-value="2"></p>
+                                    <p class="dayHumid" data-value="2"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-2 mr-2" data-value="3">
+                                <div class="card day">
+                                    <h6>day 3</h6>
+                                    <p class="dayTemp" data-value="3"></p>
+                                    <p class="dayHumid" data-value="3"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-2 mr-2" data-value="4">
+                                <div class="card day">
+                                    <h6>day 4</h6>
+                                    <p class="dayTemp" data-value="4"></p>
+                                    <p class="dayHumid" data-value="4"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-2 mr-2" data-value="5">
+                                <div class="card day">
+                                    <h6>day 5</h6>
+                                    <p class="dayTemp" data-value="5"></p>
+                                    <p class="dayHumid" data-value="5"></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     </div>
             </div>
